tests/errors/sem_hw5_typeck.kt
fun fib(i : Int) : Int {
    return 11
}
 
 fun main() {
   var i : Int = 0;
   i = 0 + 2.5;
}
// Test Output:[expect type error to + on line 7]